load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "admin.go",
        "database.go",
    ],
    importpath = "github.com/google/truestreet/database",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/cloud.google.com/go/spanner:go_default_library",
        "//vendor/cloud.google.com/go/spanner/admin/database/apiv1:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/common/model:go_default_library",
        "//vendor/github.com/prometheus/prometheus/prompb:go_default_library",
        "//vendor/google.golang.org/api/iterator:go_default_library",
        "//vendor/google.golang.org/genproto/googleapis/spanner/admin/database/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["database_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/cloud.google.com/go/spanner:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
        "//vendor/github.com/kylelemons/godebug/pretty:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/common/model:go_default_library",
        "//vendor/github.com/prometheus/prometheus/prompb:go_default_library",
    ],
)
